packages/style-macro/tests/fixtures/reject/dynamic-value.input.tsx
import { $style } from '@vapor-ui/core';
export const C = (foo) => <div className={$style({ padding: foo })} />;
